<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_IsAnyEqualToUnionValue" Id="{1ab30776-5b8c-4eb4-8ece-b0c087a9b905}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_IsAnyEqualToUnionValue : BOOL
VAR_INPUT
    ExpectedOrActual : U_ExpectedOrActual;
    ExpectedOrActualSize : UDINT;
    ExpectedOrActualTypeClass : IBaseLibrary.TypeClass;
    ExpectedOrActualValue : POINTER TO BYTE;
END_VAR
VAR
    AnyExpectedOrActual : U_ExpectedOrActual;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[AnyExpectedOrActual := F_AnyToUnionValue(AnySize := ExpectedOrActualSize,
                                         AnyTypeClass := ExpectedOrActualTypeClass,
                                         AnyValue := ExpectedOrActualValue);

CASE ExpectedOrActualTypeClass OF

    IBaseLibrary.TypeClass.TYPE_BOOL :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.boolExpectedOrActual = AnyExpectedOrActual.boolExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_BIT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.bitExpectedOrActual = AnyExpectedOrActual.bitExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_BYTE :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.byteExpectedOrActual = AnyExpectedOrActual.byteExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_WORD :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.wordExpectedOrActual = AnyExpectedOrActual.wordExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_DWORD :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.dwordExpectedOrActual = AnyExpectedOrActual.dwordExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_LWORD :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.lwordExpectedOrActual = AnyExpectedOrActual.lwordExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_SINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.sintExpectedOrActual = AnyExpectedOrActual.sintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_INT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.intExpectedOrActual = AnyExpectedOrActual.intExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_DINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.dintExpectedOrActual = AnyExpectedOrActual.dintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_LINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.lintExpectedOrActual = AnyExpectedOrActual.lintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_USINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.usintExpectedOrActual = AnyExpectedOrActual.usintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_UINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.uintExpectedOrActual = AnyExpectedOrActual.uintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_UDINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.udintExpectedOrActual = AnyExpectedOrActual.udintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_ULINT :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.ulintExpectedOrActual = AnyExpectedOrActual.ulintExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_REAL :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.realExpectedOrActual = AnyExpectedOrActual.realExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_LREAL :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.lrealExpectedOrActual = AnyExpectedOrActual.lrealExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_STRING :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.stringExpectedOrActual = AnyExpectedOrActual.stringExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_WSTRING :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.wstringExpectedOrActual = AnyExpectedOrActual.wstringExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_TIME :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.timeExpectedOrActual = AnyExpectedOrActual.timeExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_DATE :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.dateExpectedOrActual = AnyExpectedOrActual.dateExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_DATEANDTIME :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.dateandtimeExpectedOrActual = AnyExpectedOrActual.dateandtimeExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_TIMEOFDAY :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.timeofdayExpectedOrActual = AnyExpectedOrActual.timeofdayExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_POINTER :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_REFERENCE :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_SUBRANGE :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ENUM :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ARRAY :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_PARAMS :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_USERDEF :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_NONE :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANY :
        (* Even though the data input of the ExpectedOrActual is ANY, this CASE-switch will never
           enter this case, but instead the type-class that it is an instance of. So for instance,
           if the ExpectedOrActual is an instance of INT, this case-switch will enter the 
           IBaseLibrary.TypeClass.TYPE_INT case. *)
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANYBIT :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANYDATE :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANYINT :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANYNUM :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_ANYREAL :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_LAZY :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_LTIME :
        F_IsAnyEqualToUnionValue := ExpectedOrActual.ltimeExpectedOrActual = AnyExpectedOrActual.ltimeExpectedOrActual;

    IBaseLibrary.TypeClass.TYPE_BITCONST :
        F_IsAnyEqualToUnionValue := FALSE;

    IBaseLibrary.TypeClass.TYPE_INTERFACE :
        F_IsAnyEqualToUnionValue := FALSE;

    ELSE
        F_IsAnyEqualToUnionValue := FALSE;
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>